Clean up the CSS style custom bulma rules

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
         <nav class="level">
           <div class="level-item has-text-centered">
             <div>
-              <p class="heading">Database Path</p>
+              <p class="heading">Database Name</p>
               <p class="title">{{ db_name }}</p>
             </div>
           </div>
@@ -53,6 +53,7 @@
               <input id="search" class="input" type="text" autofocus placeholder="e.g. George Clooney">
             </div>
           </div>
+          <div class="level-item"></div>
         </div>
 
         <!-- Right side -->
