--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="/bulma.min.css">
+  <link rel="stylesheet" href="/bulma-prefers-dark.min.css">
   <link rel="stylesheet" href="/style.css">
   <script type="text/javascript" src="/jquery-3.4.1.min.js"></script>
   <script type="text/javascript" src="/papaparse.min.js"></script>
