Customize the mark tag css

--- a/public/style.css
+++ b/public/style.css
@@ -1,9 +1,3 @@
-em {
-  color: hsl(204, 86%, 25%);
-  font-style: inherit;
-  background-color: hsl(204, 86%, 88%);
-}
-
 #results {
   max-width: 900px;
   margin: 20px auto 0 auto;
@@ -69,6 +63,11 @@ em {
   color: rgba(0,0,0,.9);
 }
 
+.content mark {
+  background-color: hsl(204, 86%, 88%);
+  color: hsl(204, 86%, 25%);
+}
+
 @keyframes fadeInOut {
   0% { opacity: 1; }
   30% { opacity: 0.3; }
@@ -95,5 +94,10 @@ em {
 
   .content {
     color: #dbdbdb;
+  }
+
+  .content mark {
+    background-color: hsl(0, 0%, 35%);
+    color: hsl(0,0%,90.2%);
   }
 }
