--- a/templates/index.html
+++ b/templates/index.html
@@ -16,9 +16,14 @@
   <section class="hero is-light">
     <div class="hero-body">
       <div class="container">
-        <h1 class="title has-text-centered">
-          Welcome to milli
-        </h1>
+
+        <div class="columns is-flex is-centered">
+            <figure class="image is-128x128">
+                <img id="logo-white" src="logo-white.svg" alt="milli logo in white">
+                <img id="logo-black" src="logo-black.svg" alt="milli logo in black">
+            </figure>
+        </div>
+
         <nav class="level">
           <div class="level-item has-text-centered">
             <div>
