Update bulma to spread the logo more

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
     <div class="hero-body">
       <div class="container">
 
-        <div class="columns is-flex is-centered">
+        <div class="columns is-flex is-centered mb-6">
             <figure class="image is-128x128">
                 <img id="logo-white" src="logo-white.svg" alt="milli logo in white">
                 <img id="logo-black" src="logo-black.svg" alt="milli logo in black">
@@ -69,6 +69,8 @@
               <p class="heading">Documents</p>
               <p id="count" class="title">0</p>
             </div>
+          </div>
+          <div class="level-item has-text-centered">
           </div>
           <div class="level-item has-text-centered">
             <div>
