Put the documents MTBL back into LMDB
We makes sure to write the documents into a file before
memory mapping it and putting it into LMDB, this way we avoid
moving it to RAM

--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,7 @@
           <div class="level-item has-text-centered">
             <div>
               <p class="heading">Database Size</p>
-              <p class="title" id="db-size">{{ db_size }} + {{ docs_size }}</p>
+              <p class="title" id="db-size">{{ db_size }}</p>
             </div>
           </div>
           <div class="level-item has-text-centered">
