Introduce an input field for the facet filters on the http-ui

--- a/http-ui/templates/index.html
+++ b/http-ui/templates/index.html
@@ -55,7 +55,8 @@
         <div class="level-left">
           <div class="level-item">
             <div class="field has-addons has-addons-right">
-              <input id="search" class="input" type="text" autofocus placeholder="e.g. George Clooney">
+              <input id="query" class="input" type="text" autofocus placeholder="e.g. George Clooney">
+              <input id="facet" class="input" type="text" placeholder="facet filter like released >= 1577836800">
             </div>
           </div>
           <div class="level-item"></div>
