Display the update meta result content on the update page

--- a/http-ui/templates/updates.html
+++ b/http-ui/templates/updates.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-    <section class="hero is-light">
+  <section class="hero is-light">
     <div class="hero-body">
       <div class="container">
 
@@ -68,7 +68,7 @@
             <ol>
               <li class="field">
                 <div class="attribute">update id</div><div class="updateId content">{{ update_id }}</div>
-                <div class="attribute">update status</div><div class="updateStatus content">processed</div>
+                <div class="attribute">update status</div><div class="updateStatus content">{{ meta }}</div>
               </li>
             </ol>
           </li>
