--- a/http-ui/templates/index.html
+++ b/http-ui/templates/index.html
@@ -41,6 +41,7 @@
               <p class="heading">Number of Documents</p>
               <p class="title" id="docs-count">{{ docs_count }}</p>
             </div>
+	    <button id="display_facets" class="button is-success">display facets</button>
           </div>
         </nav>
       </div>
